# BasicCppCmakeSetup

./: .gitmodules  CMakeLists.txt  README.md  main.cc
TEST/: CMakeLists.txt  CuteTest.cc  HelloTest.cc  test.cc
source/: CMakeLists.txt
source/inc/: hello.h
source/src/: hello.cc
